update the paper structure.

--- a/NSDI2026/USENIX-conference-paper.tex
+++ b/NSDI2026/USENIX-conference-paper.tex
@@ -139,18 +139,10 @@ Second Institution
 
 \maketitle
 
-\input{0-abstract}
-\input{1-introduction}
-\input{2-design_principle}
-\input{3-Design&Implement}
-\input{5-use_cases}
-\input{6_evaluation}
-\input{related_work}
-\input{7-conclusion}
-\input{8-appendix}
+\input{content/content}
 
 \bibliographystyle{plain}
-\bibliography{ref}
+\bibliography{content/ref}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
