--- a/NSDI2026/USENIX-conference-paper.tex
+++ b/NSDI2026/USENIX-conference-paper.tex
@@ -139,10 +139,10 @@ Second Institution
 
 \maketitle
 
-\input{content/content}
+\input{content}
 
 \bibliographystyle{plain}
-\bibliography{content/ref}
+\bibliography{ref}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
